[project]
name = "logam-mulia-mcp"
version = "1.1.1"
description = "MCP server for Logam Mulia API — Indonesian gold prices from 18+ sources"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["mcp", "gold", "logam-mulia", "indonesia", "emas", "modelcontextprotocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.28.0",
]

[project.urls]
Home = "https://github.com/rizalibnu/logam-mulia-mcp"
Repository = "https://github.com/rizalibnu/logam-mulia-mcp"
"Bug Tracker" = "https://github.com/rizalibnu/logam-mulia-mcp/issues"
Changelog = "https://github.com/rizalibnu/logam-mulia-mcp/blob/master/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
    "pre-commit>=4.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
logam-mulia-mcp = "logam_mulia_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["logam_mulia_mcp"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "PL", "B", "A", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "PLC0415"]
"src/logam_mulia_mcp/server.py" = ["PLR2004", "PLR0913"]

[tool.ruff.format]
quote-style = "double"
